Fixed weird baseline alignment issues in some windows

--- a/css/capturesetup.css
+++ b/css/capturesetup.css
@@ -71,6 +71,7 @@
 .capturesetupmodebodyparam {
 	display: flex;
 	flex-direction: row;
+	align-items: baseline;
 	padding-top: 8px;
 }
 
